--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -1,4 +1,10 @@
-<form [formGroup]="heroForm" novalidate>
+<form [formGroup]="heroForm" (ngSubmit)="onSubmit()" novalidate>
+
+  <div style="margin-bottom: 1em">
+    <button type="submit" [disabled]="heroForm.pristine" class="btn btn-success">Save</button> &nbsp;
+    <button type="reset" (click)="revert()" [disabled]="heroForm.pristine" class="btn btn-danger">Revert</button>
+  </div>
+
 
   <div class="form-group">
     <label class="center-block">Name:
@@ -7,10 +13,10 @@
   </div>
 
   <div formArrayName="secretLairs" class="well well-lg">
-    <button (click)="addLair()" type="button">Add a Secret Lair</button>
+    <button (click)="addLair()" type="button" class="btn btn-primary">Add a Secret Lair</button>
     <div *ngFor="let address of secretLairs.controls; let i=index" [formGroupName]="i">
       <h4>Secret Lair #{{i + 1}}</h4>
-      <button (click)="removeLair(i)" type="button">Remove Secret Lair</button>
+      <button (click)="removeLair(i)" type="button" class="btn">Remove Secret Lair</button>
 
       <div class="form-group">
         <label class="center-block">Street:
@@ -57,7 +63,7 @@
 
 </form>
 
-<h4>Debug</h4>
+<h3>Debug</h3>
 
 <strong>Form value:</strong>
 <pre>{{ heroForm.value | json }}</pre>
@@ -65,8 +71,10 @@
 <strong>Form status:</strong>
 <pre>{{ heroForm.status | json }}</pre>
 
-<h4>Name change log</h4>
-<div *ngFor="let name of nameChangeLog">{{name}}</div>
+<strong>Name change log</strong>
+<pre>
+  <p *ngFor="let name of nameChangeLog">{{name}}</p>
+</pre>
 
 <p><strong>Name value</strong> {{ heroForm.get('name').value }}</p>
 <p><strong>Street value:</strong> {{ heroForm.get('address.street')?.value}}</p>
